<resources>

    <string name="app_name">DiceLink</string>

    <string name="usernameHint">Username</string>
    <string name="emailHint">Email Address</string>
    <string name="passwordHint">Password</string>
    <string name="passwordConfirmationHint">Confirm Password</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="loginOr">- Or -</string>
    <string name="signInBtn">Sign In</string>
    <string name="signInWithGoogle">Sign In with Google</string>
    <string name="signUpHint">Don\'t have an account? %1$s</string>
    <string name="signUpLink">Sign Up</string>

    <string name="register">Register</string>
    <string name="registerSub">Create your new account</string>
    <string name="signInHint">Already have an account? %1$s</string>
    <string name="signInLink">Sign In</string>
    <string name="signUpBtn">Sign Up</string>
    <string name="signUpOr">- Or -</string>
    <string name="signUpGoogle">Sign Up with Google</string>
    <string name="termsAndConditionsCheckbox">I agree to the terms and conditions</string>
    <string name="privacyCheckbox">I agree to the privacy policy</string>

    <string name="tvPassRecovery">Password Recovery</string>
    <string name="usernameOrEmail">Username or Email</string>
    <string name="recoveryBtn">Recover Password</string>

    <string name="nav_title_explore">Explore</string>
    <string name="nav_title_gametables">Game Tables</string>
    <string name="nav_title_account">Profile</string>
    <string name="nav_title_notifications">Notifications</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dashboard_alt">DashboardAltActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="human">Human</string>
    <string name="cyberpunk">Cyberpunk</string>
    <string name="rogue">Rogue</string>
    <string name="paladin">Paladin</string>
    <string name="mage">Mage</string>
    <string name="warlock">Warlock</string>
    <string name="bardo">Bardo</string>
    <string name="dungeons_and_dragons">Dungeons and Dragons</string>
    <string name="half_elf">Half-Elf</string>
    <string name="user_profile_settings">User Profile Settings</string>
    <string name="interests">Interests</string>
    <string name="role">Role:</string>
    <string name="archer">Archer</string>
    <string name="solaris">Solaris</string>
    <string name="diagon">Diagon</string>
    <string name="fighter">Fighter</string>
    <string name="zekken">Zekken</string>
    <string name="has_dungeon_master">Has dungeon master</string>
    <string name="user_1">User 1</string>

</resources>