<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_grey1"
    tools:context=".ui.view.RegisterFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">


        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/register"
            android:textSize="34sp"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/etRegisterSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/registerSub"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/usernameHint"
            android:autofillHints=""
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/emailHint"
            android:autofillHints=""
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/passwordHint"
            android:autofillHints=""
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/etPasswordConfirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/passwordConfirmationHint"
            android:autofillHints=""
            android:textColorHint="@color/white" />

        <CheckBox
            android:id="@+id/cbAgreeTermsAndConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/termsAndConditionsCheckbox"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/cbAgreePrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:text="@string/privacyCheckbox"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/signUpBtn"
            android:backgroundTint="@color/primary_red" />


        <TextView
            android:id="@+id/tvSignUpOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/signUpOr"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSignUpGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/signUpGoogle"
            android:backgroundTint="@color/primary_red" />

        <TextView
            android:id="@+id/tvSignInHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/signInHint"
            android:textColor="@color/white" />


    </LinearLayout>


</FrameLayout>