<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_explore">

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.dicelinkapp.ui.view.ExploreFragment"
        android:label="@string/nav_title_explore"
        tools:layout="@layout/fragment_explore" />

    <fragment
        android:id="@+id/navigation_game_tables"
        android:name="com.example.dicelinkapp.ui.view.GameTablesFragment"
        android:label="@string/nav_title_gametables"
        tools:layout="@layout/fragment_game_tables" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.dicelinkapp.ui.view.AccountFragment"
        android:label="@string/nav_title_account"
        tools:layout="@layout/fragment_account" />
</navigation>