<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_grey1"
    tools:context=".ui.view.PasswordRecoveryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/splashscreen_dice"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/tvPassRecovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/tvPassRecovery"
            android:textSize="24sp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/usernameOrEmail"
            android:autofillHints=""
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/btnPassRecovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/recoveryBtn"
            android:textColor="@color/white"
            android:backgroundTint="@color/primary_red" />

    </LinearLayout>


</FrameLayout>