<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="8dp"
    android:background="@color/primary_grey4">

    <!-- User Image -->
    <LinearLayout
        android:paddingEnd="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_profile_mainUser_id"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/user_icon"
            android:layout_gravity="top|center" />

        <TextView
            android:id="@+id/tv_main_user_name_id"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/user_1" />
    </LinearLayout>

    <!-- Party Details -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:background="@drawable/linearlayout_border"
        android:paddingStart="8dp">

        <!-- User Names and Roles -->
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tabletop_user_icon_id_1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/user_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tabletop_user_explore_id_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/zekken"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/role"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <TextView
                        android:id="@+id/tabletop_roletype_explore_id_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fighter"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tabletop_user_icon_id_2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/user_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tabletop_user_explore_username_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/diagon"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/role"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <TextView
                        android:id="@+id/tabletop_roletype_explore_id_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mage"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tabletop_user_icon_id_3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/user_icon" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tabletop_user_explore_username_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/solaris"
                    android:textAppearance="?attr/textAppearanceBody2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/role"
                        android:textAppearance="?attr/textAppearanceBody2" />

                    <TextView
                        android:id="@+id/tabletop_roletype_explore_id_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/archer"
                        android:textAppearance="?attr/textAppearanceBody2" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- Dungeon Master Status -->
        <LinearLayout
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_dungeon_master_status_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_dungeon_master"
                android:textAppearance="?attr/textAppearanceCaption"
                android:drawableStart="@drawable/has_dungeon_master_icon"
                android:drawablePadding="4dp" />

            <!-- Distance -->
            <TextView
                android:id="@+id/tv_distance_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5.3 km"
                android:textAppearance="?attr/textAppearanceCaption"
                android:drawableStart="@drawable/location_icon"
                android:drawablePadding="4dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- Party Image and Join Button -->
    <LinearLayout
        android:paddingStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/linearlayout_border">

            <ImageView
                android:id="@+id/iv_party_image_id"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/showimage_dnd" />
        </LinearLayout>

        <!-- Button JOIN -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/btn_join_id"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Join"
                android:backgroundTint="@color/primary_red"
                android:textColor="@android:color/white"
                android:layout_marginTop="8dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
